<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
        android:background="@drawable/w">


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/refkullanicitel"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/kullanicitel"
            android:layout_marginTop="170dp"
            android:textAlignment="center"
            android:textSize="23sp"
/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/parola"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/refkullanicitel"
            android:layout_alignStart="@+id/refkullanicitel"
            android:hint="@string/kullaniciparola"
            android:textAlignment="center"
            android:textSize="23sp"
            android:textStyle="bold"


            />

        <Button
            android:id="@+id/btngirisyap"
            android:text="@string/btngirisyap"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#54d988"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/parola"
            android:layout_centerHorizontal="true"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>
