<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"

    android:theme="@style/Theme.AppCompat.Light.DarkActionBar">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:id="@+id/refkullaniciad"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/kullaniciad"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:inputType="textPersonName"
        android:layout_marginTop="85dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textColorHighlight="#6a6a6a"
        android:theme="@android:style/Theme.Holo"
        android:textColor="#6a6a6a" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/refkullanicitel"
        android:hint="@string/kullanicitelefon"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/refkullaniciad"
        android:layout_alignStart="@+id/refkullaniciad"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textColorHighlight="#6a6a6a"
        android:theme="@android:style/Theme.Holo"
        android:textColor="#6a6a6a"
        android:phoneNumber="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:id="@+id/kullaniciparola"
        android:hint="@string/kullaniciparolaa"
        android:inputType="textPassword"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/refkullanicitel"
        android:layout_alignLeft="@+id/refkullanicitel"
        android:layout_alignStart="@+id/refkullanicitel"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic"
        android:password="true"
        android:textColorHighlight="#6a6a6a"
        android:theme="@android:style/Theme.Holo"
        android:textColor="#6a6a6a" />

    <Button
        android:id="@+id/refbtnkayitol"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnkayitol"
        android:enabled="true"
        android:layout_marginLeft="20dp"
        android:background="#31ac4c"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="64dp"
        android:layout_alignEnd="@+id/kullaniciparola" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:id="@+id/kullaniciparolatekrar"
        android:hint="@string/parolatekrar"
        android:inputType="textPassword"
        android:layout_below="@+id/kullaniciparola"
        android:layout_alignLeft="@+id/refbtnkayitol"
        android:layout_alignStart="@+id/refbtnkayitol"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textColorHighlight="#6a6a6a"
        android:theme="@android:style/Theme.Holo"
        android:textColor="#6a6a6a"
        android:password="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:max="100"
        android:maxHeight="20dp"
        android:minHeight="10dp"
        android:progress="0"
        android:progressDrawable="@drawable/progressbar"
        android:secondaryProgress="100"
        android:layout_above="@+id/refbtnkayitol"
        android:layout_alignStart="@+id/refbtnkayitol"
        android:layout_marginBottom="30dp"
        android:layout_alignEnd="@+id/refbtnkayitol" />
</RelativeLayout>
</LinearLayout>
